apps/homepage/templated.yaml
---
# Source: homepage/charts/app-template/templates/common.yaml
apiVersion: v1
kind: Service
metadata:
  name: homepage
  labels:
    app.kubernetes.io/instance: homepage
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: homepage
    app.kubernetes.io/service: homepage
    helm.sh/chart: app-template-4.0.1
  namespace: intel-system
spec:
  type: ClusterIP
  ports:
    - port: 31310
      targetPort: 31310
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/controller: main
    app.kubernetes.io/instance: homepage
    app.kubernetes.io/name: homepage
---
# Source: homepage/charts/app-template/templates/common.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: homepage
  labels:
    app.kubernetes.io/controller: main
    app.kubernetes.io/instance: homepage
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: homepage
    helm.sh/chart: app-template-4.0.1
  namespace: intel-system
spec:
  revisionHistoryLimit: 3
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/controller: main
      app.kubernetes.io/name: homepage
      app.kubernetes.io/instance: homepage
  template:
    metadata:
      annotations: 
        checksum/configMaps: f374214338472936a6d5627c27f1b74d020db05bfc85f61457d3ac8cad955eb6
      labels: 
        app.kubernetes.io/controller: main
        app.kubernetes.io/instance: homepage
        app.kubernetes.io/name: homepage
    spec: 
      enableServiceLinks: false
      serviceAccountName: default
      automountServiceAccountToken: true
      hostIPC: false
      hostNetwork: false
      hostPID: false
      dnsPolicy: ClusterFirst
      containers: 
        - image: ghcr.io/gethomepage/homepage:v1.2.0
          name: main
          volumeMounts:
          - mountPath: /app/config/settings.yaml
            name: config
            subPath: settings.yaml
          - mountPath: /app/config/widgets.yaml
            name: config
            subPath: widgets.yaml
          - mountPath: /app/config/services.yaml
            name: config
            subPath: services.yaml
          - mountPath: /app/config/bookmarks.yaml
            name: config
            subPath: bookmarks.yaml
      volumes: 
        - configMap:
            name: homepage-config
          name: config
---
# Source: homepage/charts/app-template/templates/common.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: homepage
  labels:
    app.kubernetes.io/instance: homepage
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: homepage
    helm.sh/chart: app-template-4.0.1
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: HTTP
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
  namespace: intel-system
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - "homepage.vsval.intel.com"
      secretName: "homepage-vsval-tls-certificate"
  rules:
    - host: "homepage.vsval.intel.com"
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: main
                port:
                  number: 31310
